@@ -2,6 +2,10 @@
 = CHANGES BETWEEN COQ V8.3 AND COQ V8.4 =
 =========================================
 
+** Removal of Tacinterp.constr_of_id **
+
+Use instead either global_reference or construct_reference in constrintern.ml.
+
 ** Optimizing calls to Evd functions **
 
 Evars are split into defined evars and undefined evars; for
